--- a/about/team/index.html
+++ b/about/team/index.html
@@ -80,6 +80,30 @@ permalink: /about/team/index.html
                           </div>
                       </div>
                   </div>
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/artur.png" alt="Picture of Artur">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.artur.name %}</h4>
+                              <p class="title">{% t team.artur.title %}</p>
+                              <p class="bio">{% t team.artur.bio %}</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/narek.png" alt="Picture of Narek">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.narek.name %}</h4>
+                              <p class="title">{% t team.narek.title %}</p>
+                              <p class="bio">{% t team.narek.bio %}</p>
+                          </div>
+                      </div>
+                  </div>
               </div>
       </section>
 
@@ -95,50 +119,14 @@ permalink: /about/team/index.html
              <div class="col tmember">
                  <div class="row">
                      <div class="col">
-                         <img src="/img/team/zorayr-zakaryan_pic.jpg" alt="Picture of Zorayr Zakaryan">
+                         <img src="/img/team/cypherstack.jpg" alt="Picture of Cypher Stack">
                      </div>
                      <div class="col">
-                         <h4>{% t team.zorayrzakaryan.name %}</h4>
-                         <p class="title">{% t team.zorayrzakaryan.title %}</p>
-                         <p class="bio">{% t team.zorayrzakaryan.bio %}</p>
+                         <h4>{% t team.cypherstack.name %}</h4>
+                         <p class="title">{% t team.cypherstack.title %}</p>
+                         <p class="bio">{% t team.cypherstack.bio %}</p>
                      </div>
                  </div>
-             </div>
-             <div class="col tmember">
-                 <div class="row">
-                     <div class="col">
-                         <img src="/img/team/hakob-kanoyan_pic.jpg" alt="Picture Hakob Kanoyan">
-                     </div>
-                     <div class="col">
-                         <h4>{% t team.hakobkanoyan.name %}</h4>
-                         <p class="title">{% t team.hakobkanoyan.title %}</p>
-                         <p class="bio">{% t team.hakobkanoyan.bio %}</p>
-                     </div>
-                 </div>
-             </div>
-             <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/hayk-zakaryan_pic.jpg" alt="Picure of Hayk Zakaryan">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.haykzakaryan.name %}</h4>
-                        <p class="title">{% t team.haykzakaryan.title %}</p>
-                        <p class="bio">{% t team.haykzakaryan.bio %}</p>
-                    </div>
-                </div>
-             </div>
-             <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/armine-zakaryan_pic.jpg" alt="Picture Armine Zakaryan">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.arminezakaryan.name %}</h4>
-                        <p class="title">{% t team.arminezakaryan.title %}</p>
-                        <p class="bio">{% t team.arminezakaryan.bio %}</p>
-                    </div>
-                </div>
              </div>
           </div>
       </section>
@@ -177,6 +165,30 @@ permalink: /about/team/index.html
                     </div>
                 </div>
             </div>  
+            <div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/batuhan.png" alt="Picture of Batuhan">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.batuhan.name %}</h4>
+                        <p class="title">{% t team.batuhan.title %}</p>
+                        <p class="bio">{% t team.batuhan.bio %}</p>
+                    </div>
+                </div>
+            </div> 
+            div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/antibit.jpg" alt="Picture of Antibit">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.antibit.name %}</h4>
+                        <p class="title">{% t team.antibit.title %}</p>
+                        <p class="bio">{% t team.antibit.bio %}</p>
+                    </div>
+                </div>
+            </div>  
          </div>
       </section>
       
@@ -198,6 +210,18 @@ permalink: /about/team/index.html
                               <h4>{% t team.aramjivanyan.name %}</h4>
                               <p class="title">{% t team.aramjivanyan.title %}</p>
                               <p class="bio">{% t team.aramjivanyan.bio %}</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/aaronfeickert.jpg" alt="Picture of Aaron Feickert">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.aaronfeickert.name %}</h4>
+                              <p class="title">{% t team.aaronfeickert.title %}</p>
+                              <p class="bio">{% t team.aaronfeickert.bio %}</p>
                           </div>
                       </div>
                   </div>
