Readd Stack Wallet

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -180,6 +180,32 @@ permalink: /get-firo/download/index.html
                   </div>
               </div>
               <div class="row mob-wallets">
+                          <div class="col">
+                              <img class="ext-wallets" src="/img/mobile-wallets/stack.png" alt="Stack Wallet logo" loading="lazy">
+                              <h4>Stack Wallet</h4>
+                              <ul class="row">
+                                 <li class="col">
+                                    <a href="https://play.google.com/store/apps/details?id=com.cypherstack.stackwallet" target="_blank">
+                                        <img src="/img/site-icons/footer/android.svg" title="Android" alt="android logo">
+                                    </a>
+                                 </li>
+                                  <li class="col">
+                                     <a href="https://apps.apple.com/us/app/stack-wallet-by-cypher-stack/id1634811534" target="_blank">
+                                        <img src="/img/site-icons/footer/apple.svg" title="Apple" alt="apple logo">
+                                      </a>
+                                 </li>
+                                 <li class="col">
+                                     <a href="https://github.com/cypherstack/stack_wallet/releases/latest" target="_blank">
+                                        <img src="/img/site-icons/footer/desktop.svg" title="Desktop" alt="desktop logo">
+                                      </a>
+                                 </li>
+                                 <li class="col">
+                                     <a href="https://github.com/cypherstack/stack_wallet/" target="_blank">
+                                        <img src="/img/site-icons/footer/web.svg" title="Web" alt="web logo">
+                                      </a>
+                                 </li>
+                              </ul>
+                          </div>
 		      <div class="col">
                               <img class="ext-wallets" src="/img/mobile-wallets/now-wallet-logo.png" alt="NOW Wallet logo" loading="lazy">
                               <h4>NOW Wallet</h4>
