--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -119,6 +119,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt="Wazirx logo" title="wazirx.com"></a>
                   </div>
+                  <div class="col">
+                      <a href="https://ascendex.com/en/cashtrade-spottrading/usdt/firo" target="_blank"><img src="/img/crypto-exchanges/ascendex.svg" alt="AscendEX logo" title="Ascendex.com"></a>
+                  </div>
               </div>
           </div>
       </section>
