--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ permalink: /index.html
           </div>
           <div class="row rnd">
              <div class="col col-info">
-                  <h3>{% t home.randd %}</h3>
+                  <a href="https://firo.org"><h3>{% t home.randd %}</h3></a>
                   <p>{% t home.randd1 %}</p>
 
                   <p><a class="btn-tertiary" href="{{ site.baseurl }}/about/research/"><span>{% t home.cta2 %}</span><i class="icons-right-small"></i></a></p>
