--- a/pr-preview/pr-424/index.html
+++ b/pr-preview/pr-424/index.html
@@ -248,7 +248,7 @@
           <div class="row rnd">
              <div class="col col-info">
                   <a href="https://firo.org"><h3>Research and Development</h3></a>
-                  <p>Firo stands out as one out of a handful of projects that contribute independent research to blockchain privacy and decentralization technologies such as Zerocoin, Sigma, Lelantus, Lelantus Spark and MTP. Our work has played a pivotal role in the space having influenced or been adopted in other projects.</p>
+                  <p><a href="https://firo.org">Firo stands out as one out</a> of a handful of projects that contribute independent research to blockchain privacy and decentralization technologies such as Zerocoin, Sigma, Lelantus, Lelantus Spark and MTP. Our work has played a pivotal role in the space having influenced or been adopted in other projects.</p>
 
                   <p><a class="btn-tertiary" href="/firo-site/pr-preview/pr-424/about/research/"><span>Learn more</span><i class="icons-right-small"></i></a></p>
              </div>
