--- a/about/team/index.html
+++ b/about/team/index.html
@@ -83,12 +83,24 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/gevorg.jpg" alt="Picture of Gevorg Mirzoyan">
+                            <img src="/img/team/artur.png" alt="Picture of Artur">
                         </div>
                         <div class="col">
-                            <h4>{% t team.gevorgmirzoyan.name %}</h4>
-                            <p class="title">{% t team.gevorgmirzoyan.title %}</p>
-                            <p class="bio">{% t team.gevorgmirzoyan.bio %}</p>
+                            <h4>{% t team.artur.name %}</h4>
+                            <p class="title">{% t team.artur.title %}</p>
+                            <p class="bio">{% t team.artur.bio %}</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col tmember">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/img/team/narek.png" alt="Picture of Narek">
+                        </div>
+                        <div class="col">
+                            <h4>{% t team.narek.name %}</h4>
+                            <p class="title">{% t team.narek.title %}</p>
+                            <p class="bio">{% t team.narek.bio %}</p>
                         </div>
                     </div>
                   </div>
