Deploy preview for PR 426 🛫

--- a/pr-preview/pr-426/nl/about/team/index.html
+++ b/pr-preview/pr-426/nl/about/team/index.html
@@ -250,12 +250,24 @@
                   <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/gevorg.jpg" alt="Picture of Gevorg Mirzoyan">
+                            <img src="/img/team/artur.png" alt="Picture of Artur">
                         </div>
                         <div class="col">
-                            <h4>Gevorg Mirzoyan</h4>
-                            <p class="title">Ontwikkelaar</p>
-                            <p class="bio">Gevorg is een software-ingenieur die is afgestudeerd aan de Faculteit Toegepaste Wiskunde en Informatica van de Russisch-Armeense (Slavische) Universiteit. Zijn technische stack omvat C++, Unity en Linux. Hij heeft een passie voor programmeren, wandelen en games.</p>
+                            <h4>Artur</h4>
+                            <p class="title">Developer</p>
+                            <p class="bio">Artur is a budding software engineer and Yerevan State Medical University student, brings a unique blend of medical knowledge and tech skills. Graduating from Picsart Academy, he excels in C/C++ and has hands-on experience in software development.His passion lies in merging medicine and technology to create impactful solutions.</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col tmember">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/img/team/narek.png" alt="Picture of Narek">
+                        </div>
+                        <div class="col">
+                            <h4>Narek Geghamyan</h4>
+                            <p class="title">Developer</p>
+                            <p class="bio">Narek is a software engineer who graduated from a Faculty of  computer science in National University of Architecture and Construction of Armenia. His tech stack includes C++ and Linux. He has a passion a swimming and coding.</p>
                         </div>
                     </div>
                   </div>
