--- a/pr-preview/pr-426/zh-cn/about/team/index.html
+++ b/pr-preview/pr-426/zh-cn/about/team/index.html
@@ -250,12 +250,24 @@
                   <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/gevorg.jpg" alt="Picture of Gevorg Mirzoyan">
+                            <img src="/img/team/artur.png" alt="Picture of Artur">
                         </div>
                         <div class="col">
-                            <h4>Gevorg Mirzoyan</h4>
-                            <p class="title">开发者</p>
-                            <p class="bio">Gevorg 是一位软件工程师，毕业于俄罗斯-亚美尼亚（斯拉夫）大学应用数学和信息学系。他的技术栈包括 C++、Unity 和 Linux。他热衷于编程、徒步旅行和游戏。</p>
+                            <h4>Artur</h4>
+                            <p class="title">Developer</p>
+                            <p class="bio">Artur is a budding software engineer and Yerevan State Medical University student, brings a unique blend of medical knowledge and tech skills. Graduating from Picsart Academy, he excels in C/C++ and has hands-on experience in software development.His passion lies in merging medicine and technology to create impactful solutions.</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col tmember">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/img/team/narek.png" alt="Picture of Narek">
+                        </div>
+                        <div class="col">
+                            <h4>Narek Geghamyan</h4>
+                            <p class="title">Developer</p>
+                            <p class="bio">Narek is a software engineer who graduated from a Faculty of  computer science in National University of Architecture and Construction of Armenia. His tech stack includes C++ and Linux. He has a passion a swimming and coding.</p>
                         </div>
                     </div>
                   </div>
