--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -61,7 +61,7 @@ permalink: /get-firo/download/index.html
                                 <a href="https://github.com/firoorg/firo/releases/download/v{{ site.data.downloads.firo_qt_version }}/firo-{{ site.data.downloads.firo_qt_version }}-arm64-macos.dmg">{% t download.downloadqtmarm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh1">
-                                    <label class="tab-label" for="mh1">{% t download.hashesmac %}</label>
+                                    <label class="tab-label" for="mh1">{% t download.hashesmacarm %}</label>
                                     <div class="tab-content">
                                       <p>{{ site.data.downloads.qt_hashes_mac_arm }}</p>
                                     </div>
