--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -152,7 +152,9 @@ permalink: /community/merchants/index.html
                       <label class="acc-label" for="chck7">{% t merchants.button7 %}</label>
                       <div class="accordion-content col" id="btn7-content">
                             <div class="row">
-                               <div class="col"><a href="https://www.allnodes.com/firo/host?utm_source=mbuzz&utm_medium=hosting&utm_campaign=firo" target="_blank"><img src="/img/merchants/logos/allnodes-logo.png" alt="Allnodes logo"></a></div>  
+                               <div class="col"><a href="https://www.allnodes.com/firo/host?utm_source=mbuzz&utm_medium=hosting&utm_campaign=firo" target="_blank"><img src="/img/merchants/logos/allnodes-logo.png" alt="Allnodes logo"></a></div>
+                               <div class="col"><a href="https://nodehub.io/" target="_blank"><img src="/img/merchants/logos/nodehub-logo.png" alt="Nodehub.io logo"></a></div>
+                               <div class="col"><a href="https://pecuniaplatform.io/home" target="_blank"><img src="/img/merchants/logos/pecunia-logo.png" alt="Pecunia Platform logo"></a></div>  
                             </div>
                       </div>
                   </div>
