--- a/about/team/index.html
+++ b/about/team/index.html
@@ -46,7 +46,31 @@ permalink: /about/team/index.html
             </div>
         </div>
     </section>
-      
+
+ <section class="team-section">
+             <div class="container">
+                  <div class="row">
+                      <div class="col head">
+                            <h2>{% t team.research %}</h2>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/aram.jpg" alt="Picture of Aram Jivanyan">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.aramjivanyan.name %}</h4>
+                              <p class="title">{% t team.aramjivanyan.title %}</p>
+                              <p class="bio">{% t team.aramjivanyan.bio %}</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+</section>       
+
       <section class="team-section">
               <div class="container">
                   <div class="row">
@@ -164,7 +188,19 @@ permalink: /about/team/index.html
                         <p class="bio">{% t team.ajaydono.bio %}</p>
                     </div>
                 </div>
-            </div>  
+            </div>
+            <div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/lilking.png" alt="Picture of Lil-King">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.lilking.name %}</h4>
+                        <p class="title">{% t team.lilking.title %}</p>
+                        <p class="bio">{% t team.lilking.bio %}</p>
+                    </div>
+                </div>
+            </div>    
             <div class="col tmember">
                 <div class="row">
                     <div class="col">
@@ -191,39 +227,4 @@ permalink: /about/team/index.html
             </div>  
          </div>
       </section>
-      
-      <section class="team-section">
-             <div class="container">
-                  <div class="row">
-                      <div class="col head">
-                            <h2>{% t team.research %}</h2>
-                      </div>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
-                              <img src="/img/team/aram.jpg" alt="Picture of Aram Jivanyan">
-                          </div>
-                          <div class="col">
-                              <h4>{% t team.aramjivanyan.name %}</h4>
-                              <p class="title">{% t team.aramjivanyan.title %}</p>
-                              <p class="bio">{% t team.aramjivanyan.bio %}</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
-                              <img src="/img/team/aaronfeickert.jpg" alt="Picture of Aaron Feickert">
-                          </div>
-                          <div class="col">
-                              <h4>{% t team.aaronfeickert.name %}</h4>
-                              <p class="title">{% t team.aaronfeickert.title %}</p>
-                              <p class="bio">{% t team.aaronfeickert.bio %}</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-      </section>       
+
