--- a/about/team/index.html
+++ b/about/team/index.html
@@ -213,7 +213,7 @@ permalink: /about/team/index.html
                     </div>
                 </div>
             </div> 
-            div class="col tmember">
+            <div class="col tmember">
                 <div class="row">
                     <div class="col">
                         <img src="/img/team/antibit.jpg" alt="Picture of Antibit">
