--- a/pr-preview/pr-439/id/about/team/index.html
+++ b/pr-preview/pr-439/id/about/team/index.html
@@ -380,7 +380,7 @@
                     </div>
                 </div>
             </div> 
-            div class="col tmember">
+            <div class="col tmember">
                 <div class="row">
                     <div class="col">
                         <img src="/img/team/antibit.jpg" alt="Picture of Antibit">
