Latest update team (#439)
* Update with new team members

* Update index.html

* Lil-King

* cypherstack logo

* Update en.yml

* Update index.html

missing syntax

--- a/about/team/index.html
+++ b/about/team/index.html
@@ -46,7 +46,31 @@ permalink: /about/team/index.html
             </div>
         </div>
     </section>
-      
+
+ <section class="team-section">
+             <div class="container">
+                  <div class="row">
+                      <div class="col head">
+                            <h2>{% t team.research %}</h2>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/aram.jpg" alt="Picture of Aram Jivanyan">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.aramjivanyan.name %}</h4>
+                              <p class="title">{% t team.aramjivanyan.title %}</p>
+                              <p class="bio">{% t team.aramjivanyan.bio %}</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+</section>       
+
       <section class="team-section">
               <div class="container">
                   <div class="row">
@@ -81,28 +105,28 @@ permalink: /about/team/index.html
                       </div>
                   </div>
                   <div class="col tmember">
-                    <div class="row">
-                        <div class="col">
-                            <img src="/img/team/artur.png" alt="Picture of Artur">
-                        </div>
-                        <div class="col">
-                            <h4>{% t team.artur.name %}</h4>
-                            <p class="title">{% t team.artur.title %}</p>
-                            <p class="bio">{% t team.artur.bio %}</p>
-                        </div>
-                    </div>
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/artur.png" alt="Picture of Artur">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.artur.name %}</h4>
+                              <p class="title">{% t team.artur.title %}</p>
+                              <p class="bio">{% t team.artur.bio %}</p>
+                          </div>
+                      </div>
                   </div>
                   <div class="col tmember">
-                    <div class="row">
-                        <div class="col">
-                            <img src="/img/team/narek.png" alt="Picture of Narek">
-                        </div>
-                        <div class="col">
-                            <h4>{% t team.narek.name %}</h4>
-                            <p class="title">{% t team.narek.title %}</p>
-                            <p class="bio">{% t team.narek.bio %}</p>
-                        </div>
-                    </div>
+                      <div class="row">
+                          <div class="col">
+                              <img src="/img/team/narek.png" alt="Picture of Narek">
+                          </div>
+                          <div class="col">
+                              <h4>{% t team.narek.name %}</h4>
+                              <p class="title">{% t team.narek.title %}</p>
+                              <p class="bio">{% t team.narek.bio %}</p>
+                          </div>
+                      </div>
                   </div>
               </div>
       </section>
@@ -119,50 +143,14 @@ permalink: /about/team/index.html
              <div class="col tmember">
                  <div class="row">
                      <div class="col">
-                         <img src="/img/team/zorayr-zakaryan_pic.jpg" alt="Picture of Zorayr Zakaryan">
+                         <img src="/img/team/cypherstack.jpg" alt="Picture of Cypher Stack">
                      </div>
                      <div class="col">
-                         <h4>{% t team.zorayrzakaryan.name %}</h4>
-                         <p class="title">{% t team.zorayrzakaryan.title %}</p>
-                         <p class="bio">{% t team.zorayrzakaryan.bio %}</p>
+                         <h4>{% t team.cypherstack.name %}</h4>
+                         <p class="title">{% t team.cypherstack.title %}</p>
+                         <p class="bio">{% t team.cypherstack.bio %}</p>
                      </div>
                  </div>
-             </div>
-             <div class="col tmember">
-                 <div class="row">
-                     <div class="col">
-                         <img src="/img/team/hakob-kanoyan_pic.jpg" alt="Picture Hakob Kanoyan">
-                     </div>
-                     <div class="col">
-                         <h4>{% t team.hakobkanoyan.name %}</h4>
-                         <p class="title">{% t team.hakobkanoyan.title %}</p>
-                         <p class="bio">{% t team.hakobkanoyan.bio %}</p>
-                     </div>
-                 </div>
-             </div>
-             <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/hayk-zakaryan_pic.jpg" alt="Picure of Hayk Zakaryan">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.haykzakaryan.name %}</h4>
-                        <p class="title">{% t team.haykzakaryan.title %}</p>
-                        <p class="bio">{% t team.haykzakaryan.bio %}</p>
-                    </div>
-                </div>
-             </div>
-             <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/armine-zakaryan_pic.jpg" alt="Picture Armine Zakaryan">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.arminezakaryan.name %}</h4>
-                        <p class="title">{% t team.arminezakaryan.title %}</p>
-                        <p class="bio">{% t team.arminezakaryan.bio %}</p>
-                    </div>
-                </div>
              </div>
           </div>
       </section>
@@ -200,78 +188,42 @@ permalink: /about/team/index.html
                         <p class="bio">{% t team.ajaydono.bio %}</p>
                     </div>
                 </div>
-            </div>  
-            <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/lucas-fullam.jpg" alt="Picture of Lucas Fullam">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.lucasfullam.name %}</h4>
-                        <p class="title">{% t team.lucasfullam.title %}</p>
-                        <p class="bio">{% t team.lucasfullam.bio %}</p>
-                    </div>
-                </div>
-            </div>                  
-            <div class="col tmember">
-                <div class="row">
-                    <div class="col">
-                        <img src="/img/team/sebastian.jpg" alt="Picture of Sebastian Bausch">
-                    </div>
-                    <div class="col">
-                        <h4>{% t team.sebastianbausch.name %}</h4>
-                        <p class="title">{% t team.sebastianbausch.title %}</p>
-                        <p class="bio">{% t team.sebastianbausch.bio %}</p>
-                    </div>
-                </div>
             </div>
-             <div class="col tmember">
-                 <div class="row">
-                     <div class="col">
-                         <img src="/img/team/lemar.jpg" alt="Picture of Lemar 'Luke' Briones">
-                     </div>
-                     <div class="col">
-                         <h4>{% t team.lemarlukebriones.name %}</h4>
-                         <p class="title">{% t team.lemarlukebriones.title %}</p>
-                         <p class="bio">{% t team.lemarlukebriones.bio %}</p>
-                     </div>
-                 </div>
-             </div>
+            <div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/lilking.png" alt="Picture of Lil-King">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.lilking.name %}</h4>
+                        <p class="title">{% t team.lilking.title %}</p>
+                        <p class="bio">{% t team.lilking.bio %}</p>
+                    </div>
+                </div>
+            </div>    
+            <div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/batuhan.png" alt="Picture of Batuhan">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.batuhan.name %}</h4>
+                        <p class="title">{% t team.batuhan.title %}</p>
+                        <p class="bio">{% t team.batuhan.bio %}</p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col tmember">
+                <div class="row">
+                    <div class="col">
+                        <img src="/img/team/antibit.jpg" alt="Picture of Antibit">
+                    </div>
+                    <div class="col">
+                        <h4>{% t team.antibit.name %}</h4>
+                        <p class="title">{% t team.antibit.title %}</p>
+                        <p class="bio">{% t team.antibit.bio %}</p>
+                    </div>
+                </div>
+            </div>  
          </div>
-      </section>
-      
-      <section class="team-section">
-             <div class="container">
-                  <div class="row">
-                      <div class="col head">
-                            <h2>{% t team.research %}</h2>
-                      </div>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
-                              <img src="/img/team/aram.jpg" alt="Picture of Aram Jivanyan">
-                          </div>
-                          <div class="col">
-                              <h4>{% t team.aramjivanyan.name %}</h4>
-                              <p class="title">{% t team.aramjivanyan.title %}</p>
-                              <p class="bio">{% t team.aramjivanyan.bio %}</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
-                              <img src="/img/team/Areg-Vrtanesyan.png" alt="Picture of Areg Vrtanesyan">
-                          </div>
-                          <div class="col">
-                              <h4>{% t team.aregvrtanesyan.name %}</h4>
-                              <p class="title">{% t team.aregvrtanesyan.title %}</p>
-                              <p class="bio">{% t team.aregvrtanesyan.bio %}</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-      </section>       
+      </section>  
