--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -91,7 +91,7 @@ permalink: /get-firo/download/index.html
                             <p class="wversion">{{ site.data.downloads.firo_electron_version }}</p>
                             <p class="changelog"><a href="https://github.com/firoorg/campfire/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}-windows.zip">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
