--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -101,7 +101,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}-macos.zip">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
@@ -111,7 +111,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
