Deploy preview for PR 444 🛫

--- a/pr-preview/pr-444/zh-cn/get-firo/download/index.html
+++ b/pr-preview/pr-444/zh-cn/get-firo/download/index.html
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">下载 macOS 版 Campfire 钱包</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2-macos.zip">下载 macOS 版 Campfire 钱包</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">显示 macOS 版钱包的 SHA256 哈希</label>
@@ -278,7 +278,7 @@
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">下载 Linux 版 Campfire 钱包</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2.AppImage">下载 Linux 版 Campfire 钱包</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">显示 Linux 版钱包的 SHA256 哈希</label>
