--- a/pr-preview/pr-444/get-firo/download/index.html
+++ b/pr-preview/pr-444/get-firo/download/index.html
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">Download Campfire for macOS</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2-macos.zip">Download Campfire for macOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">Show SHA256 hashes for macOS</label>
@@ -278,7 +278,7 @@
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">Download Campfire for Linux</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2.AppImage">Download Campfire for Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">Show SHA256 hashes for Linux</label>
