--- a/pr-preview/pr-444/id/get-firo/download/index.html
+++ b/pr-preview/pr-444/id/get-firo/download/index.html
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">Unduh Campfire untuk macOS</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2-macos.zip">Unduh Campfire untuk macOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">Tampilkan hash SHA256 untuk macOS</label>
@@ -278,7 +278,7 @@
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/latest">Unduh Campfire untuk Linux</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v2.0.2/campfire-v2.0.2.AppImage">Unduh Campfire untuk Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">Tampilkan hash SHA256 untuk Linux</label>
