--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -88,35 +88,35 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">{{ site.data.downloads.firo_electron_version }}</p>
+                            <p class="wversion">{{ site.data.downloads.campfire_version }}</p>
                             <p class="changelog"><a href="https://github.com/firoorg/campfire/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}-windows.zip">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-windows.zip">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>{{ site.data.downloads.electron_hashes_win }}</p>
+                                      <p>{{ site.data.downloads.campfire_hashes_win }}</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}-macos.zip">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-macos.zip">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>{{ site.data.downloads.electron_hashes_mac }}</p>
+                                      <p>{{ site.data.downloads.campfire_hashes_mac }}</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.firo_electron_version }}/campfire-v{{ site.data.downloads.firo_electron_version}}.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>{{ site.data.downloads.electron_hashes_lin }}</p>
+                                      <p>{{ site.data.downloads.campfire_hashes_lin }}</p>
                                     </div>
                               </div>
                             </div>
