--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -87,11 +87,11 @@ permalink: /get-firo/download/index.html
                     <div class="col">
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
-                            <h3>{% t download.electron %}</h3>
+                            <h3>{% t download.campfire %}</h3>
                             <p class="wversion">{{ site.data.downloads.campfire_version }}</p>
                             <p class="changelog"><a href="https://github.com/firoorg/campfire/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-windows.zip">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-windows.zip">{% t download.downloadcampfirew %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
@@ -101,7 +101,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-macos.zip">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}-macos.zip">{% t download.downloadcampfirem %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
@@ -111,7 +111,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/campfire/releases/download/v{{ site.data.downloads.campfire_version }}/campfire-v{{ site.data.downloads.campfire_version}}.AppImage">{% t download.downloadcampfirel %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
