added biconomy to buy-firo page

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -122,6 +122,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://ascendex.com/en/cashtrade-spottrading/usdt/firo" target="_blank"><img src="/img/crypto-exchanges/ascendex.svg" alt="AscendEX logo" title="Ascendex.com"></a>
                   </div>
+                  <div class="col">
+                      <a href="https://www.biconomy.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/biconomy.svg" alt="Biconomy logo" title="Biconomy.com"></a>
+                  </div>  
               </div>
           </div>
       </section>
