--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -121,6 +121,9 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                       <a href="https://www.biconomy.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/biconomy.svg" alt="Biconomy logo" title="Biconomy.com"></a>
+                  </div>
+                  <div class="col">
+                      <a href="https://qutrade.io/en/?market=firo_s11" target="_blank"><img src="/img/crypto-exchanges/qutrade.png" alt="Qutrade logo" title="Qutrade"></a>
                   </div>  
               </div>
           </div>
